--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,9 @@ body {
   top: 5%;
   left: 50%;
   transform: translateX(-50%) translateY(0);
+  padding: 0 1.5rem;
   font-family: 'Roboto Mono', monospace;
-  max-width: 39rem;
+  width: 37rem;
   max-height: 54.5rem;
   background-color: white;
   border-radius: .3rem;
@@ -58,7 +59,7 @@ body {
       .container__buttons .row .col-2-of-3,
       .container__buttons .row .col-3-of-3 {
         display: inline-block;
-        margin: 0 auto; }
+        margin: 0 1rem; }
         .container__buttons .row .col-1-of-3 button,
         .container__buttons .row .col-2-of-3 button,
         .container__buttons .row .col-3-of-3 button {
@@ -110,9 +111,11 @@ body {
     outline: none;
     border-radius: 3rem;
     height: 3rem;
-    width: 14rem;
+    width: 12.4rem;
     padding-left: 1rem;
-    border: 0.3rem solid #623fa3; }
+    border: 0.3rem solid #623fa3;
+    font-family: inherit;
+    font-size: 1rem; }
   .container__status--online, .container__status--offline {
     opacity: 0;
     display: none; }
@@ -140,6 +143,8 @@ body {
       width: 6rem;
       border: 0.2rem solid #623fa3;
       margin: 0 1rem 0 0; }
+      .container__twitch-user .logo-box .img-streamer-logo {
+        width: 100%; }
     .container__twitch-user h1 {
       font-size: 1.6rem;
       font-weight: bold; }
