--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
     padding: 0;
 }
   
-//VARIBLES, MIXINS.
+//Color varibles.
 $twitchColorDarker: #623fa3;
 $twitchColorBrighter: #9a7ecd;
 $buttonsColor: #bfbfbf;
@@ -13,6 +13,53 @@ $colorWhite: #ffffff;
 $onlineColor: #39e600;
 $offlineColor: #bfbfbf;
   
+
+//Mixins.
+
+//MEDIA QUERY MANAGER
+/*
+0 - 400px:      Very slim phone
+400 - 500px:    Slim phone     
+500 - 600px:    Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+1200 - 1800px:  is where our normal styles apply
+1800px + :      Big desktop
+$breakpoint argument choices:
+- phone-slim
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+
+@mixin respond($breakpoint) {
+    //400px
+    @if $breakpoint == phone-very-slim {
+        @media (max-width: 25em) { @content };
+    };
+    //500px
+    @if $breakpoint == phone-slim {
+        @media (max-width: 31.25em) { @content };
+    };
+    //600px
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content };
+    };
+    //900px
+    @if $breakpoint == tab-port {
+        @media (max-width: 56.25em) { @content };
+    };
+    //1200px
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content };
+    };
+    //1800px
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) { @content };
+    };
+}
+
 //Fix floating problem.
 @mixin clearfix {
     &::after {
