--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,7 +102,7 @@ body {
     padding: 0 1.5rem;
     font-family: 'Roboto Mono', monospace;
     width: 37rem;
-    max-height: 57rem;
+    max-height: auto;
     background-color: white;
     border-radius: .3rem;
     opacity: 1;
