--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
   padding: 0 1.5rem;
   font-family: 'Roboto Mono', monospace;
   width: 37rem;
-  max-height: auto;
+  height: auto;
   background-color: white;
   border-radius: .3rem;
   opacity: 1;
@@ -110,7 +110,7 @@ body {
             .container__buttons .row .col-1-of-3 button,
             .container__buttons .row .col-2-of-3 button,
             .container__buttons .row .col-3-of-3 button {
-              width: 8rem; } }
+              width: 9rem; } }
           .container__buttons .row .col-1-of-3 button:hover,
           .container__buttons .row .col-2-of-3 button:hover,
           .container__buttons .row .col-3-of-3 button:hover {
