--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
     .bg-video {
       opacity: 0; } }
   .bg-video__content {
+    position: fixed;
     width: 100%;
     height: 100%;
     object-fit: cover; }
