--- a/css/style.css
+++ b/css/style.css
@@ -86,14 +86,10 @@ body {
       @media (max-width: 25em) {
         .container__buttons .row {
           margin: 1rem 0; } }
-      .container__buttons .row .col-1-of-3,
-      .container__buttons .row .col-2-of-3,
-      .container__buttons .row .col-3-of-3 {
+      .container__buttons .row .col-1-of-3 {
         display: inline-block;
         margin: 0 1rem; }
-        .container__buttons .row .col-1-of-3 button,
-        .container__buttons .row .col-2-of-3 button,
-        .container__buttons .row .col-3-of-3 button {
+        .container__buttons .row .col-1-of-3 button {
           text-align: center;
           color: #623fa3;
           height: 3.5rem;
@@ -108,23 +104,15 @@ body {
           transition: all .4s ease-out;
           position: relative; }
           @media (max-width: 25em) {
-            .container__buttons .row .col-1-of-3 button,
-            .container__buttons .row .col-2-of-3 button,
-            .container__buttons .row .col-3-of-3 button {
+            .container__buttons .row .col-1-of-3 button {
               width: 8.5rem; } }
-          .container__buttons .row .col-1-of-3 button:hover,
-          .container__buttons .row .col-2-of-3 button:hover,
-          .container__buttons .row .col-3-of-3 button:hover {
+          .container__buttons .row .col-1-of-3 button:hover {
             transform: translateY(-0.3rem);
             box-shadow: 0 1rem 2rem; }
-          .container__buttons .row .col-1-of-3 button:active,
-          .container__buttons .row .col-2-of-3 button:active,
-          .container__buttons .row .col-3-of-3 button:active {
+          .container__buttons .row .col-1-of-3 button:active {
             transform: translateY(-0.1rem);
             box-shadow: 0 .5rem 1rem; }
-          .container__buttons .row .col-1-of-3 button::after,
-          .container__buttons .row .col-2-of-3 button::after,
-          .container__buttons .row .col-3-of-3 button::after {
+          .container__buttons .row .col-1-of-3 button::after {
             content: "";
             display: block;
             top: 0;
@@ -135,9 +123,7 @@ body {
             border-radius: 10rem;
             z-index: -1;
             transition: all .5s ease-out; }
-          .container__buttons .row .col-1-of-3 button:hover::after,
-          .container__buttons .row .col-2-of-3 button:hover::after,
-          .container__buttons .row .col-3-of-3 button:hover::after {
+          .container__buttons .row .col-1-of-3 button:hover::after {
             transform: scaleX(1.4) scaleY(1.6);
             opacity: 0; }
   .container__input-box-center {
@@ -186,25 +172,22 @@ body {
     .container__twitch-user h1 {
       font-size: 1.6rem;
       font-weight: bold; }
-    .container__twitch-user .marker--online {
+    .container__twitch-user .marker {
       height: 1rem;
       width: 1rem;
-      background-color: #39e600;
       border-radius: 50%;
       margin: .5rem; }
-    .container__twitch-user .marker--offline {
-      height: 1rem;
-      width: 1rem;
-      background-color: #bfbfbf;
-      border-radius: 50%;
-      margin: .5rem; }
+      .container__twitch-user .marker--online {
+        background-color: #39e600; }
+      .container__twitch-user .marker--ofline {
+        background-color: #bfbfbf; }
     .container__twitch-user p {
       margin-bottom: 0; }
     .container__twitch-user [class*="col"]:not(:last-child) {
       margin-right: 2rem; }
-    .container__twitch-user .col-2-of-3 {
+    .container__twitch-user .col-1-of-3--violet {
       color: #623fa3; }
-    .container__twitch-user .col-3-of-3 {
+    .container__twitch-user .col-1-of-3--red {
       color: #ff0000; }
   .container #content {
     overflow-y: scroll;
