--- a/sass/main.scss
+++ b/sass/main.scss
@@ -315,7 +315,7 @@ body {
 
     #content {
         overflow-y: scroll;
-        max-height: 30rem;
+        height: 30rem;
         
         a {
             text-decoration: none;
