--- a/sass/main.scss
+++ b/sass/main.scss
@@ -376,15 +376,15 @@ body {
         }
 
         @include respond(image-brake-730px) {
-            top: 9rem;
+            top: 9.5rem;
         }
 
         @include respond(phone) {
-            top: 30%;
+            top: 11.5rem;
         }
 
-        @include respond(phone-slim) {
-            top: 32%;
+        @include respond(phone-very-slim) {
+            top: 12.5rem;
         }
     }
     
@@ -445,9 +445,14 @@ body {
         color: transparent;
         text-transform: uppercase;
         transition: all .3s;
+        display: inline-block;
 
         @include respond(tab-land) {
             padding-top: 3rem;
+        }
+
+        @include respond(tab-land) {
+           font-size: 2.8rem;
         }
 
         &:hover {
