--- a/sass/main.scss
+++ b/sass/main.scss
@@ -449,10 +449,11 @@ body {
 
         @include respond(tab-land) {
             padding-top: 3rem;
+            font-size: 2.8rem;
         }
 
-        @include respond(tab-land) {
-           font-size: 2.8rem;
+        @include respond(phone-slim) {
+            margin-bottom: 3.5rem;
         }
 
         &:hover {
@@ -504,6 +505,10 @@ body {
             @include respond(tab-land) {
                 top: auto;
                 margin-top: 1rem;
+            }
+
+            @include respond(phone-very-slim) {
+                right: 1.5rem;
             }
         }
       
