--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,7 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.75);
   font-family: 'Roboto Mono', monospace;
+  overflow-y: scroll;
   visibility: hidden;
   opacity: 0; }
   .popup__box {
@@ -220,8 +221,7 @@ body {
     opacity: 0;
     transition: all .5s .2s;
     font-size: 1.6rem;
-    color: #000000;
-    overflow-y: scroll; }
+    color: #000000; }
   .popup:target {
     opacity: 1;
     visibility: visible; }
