--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,6 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.75);
   font-family: 'Roboto Mono', monospace;
-  overflow-y: scroll;
   visibility: hidden;
   opacity: 0; }
   .popup__box {
@@ -293,9 +292,9 @@ body {
       .popup__header {
         padding-top: 3rem;
         font-size: 2.8rem; } }
-    @media (max-width: 31.25em) {
+    @media (max-width: 37.5em) {
       .popup__header {
-        margin-bottom: 3.5rem; } }
+        margin-bottom: 2.5rem; } }
     .popup__header:hover {
       transform: skewY(3deg) skewX(15deg) scale(1.1);
       text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -357,6 +356,10 @@ body {
     .btn-text {
       margin-top: 2.5rem;
       margin-bottom: 1.5rem; } }
+  @media (max-width: 37.5em) {
+    .btn-text {
+      margin-top: 1.5rem;
+      margin-bottom: 1rem; } }
   .btn-text:hover {
     background-color: #9a7ecd;
     color: #ffffff;
